--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 
         <ul class="list-unstyled">
           <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/tan.yaa_1213/" target="_blank"><i class="bi bi-twitter"></i></a></li>
           <li><a href="#"><i class="bi bi-instagram"></i></a></li>
           <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
         </ul>
