--- a/index.html
+++ b/index.html
@@ -448,10 +448,10 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="https://www.instagram.com/tan.yaa_1213/" target="_blank"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://www.facebook.com/tanisha.gupta.3958914/"><i class="bi bi-facebook"></i></a></li>
+          <li><a href="https://twitter.com/benz130802" target="_blank"><i class="bi bi-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/tan.yaa_1213/"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/tanya-soni-00b794223/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
 
       </div>
