--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading">I'm Tanya Soni from New Delhi, pursuing my ungergraduate studies in Engineering Physics at IIT Roorkee.I'm a passionate,budding Web Develeper focused on creating interactive digital experiences on the web.</p>
+              <p class="p-heading">I'm Tanya Soni from New Delhi, pursuing my undergraduate studies in Engineering Physics at IIT Roorkee.I'm a passionate,budding Web Develeper focused on creating interactive digital experiences on the web.</p>
               <p class="separator">My interest in web development started back in 2020 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS! .Besides web development i m learning to code in JAVA language. </p>
 
             </div>
